<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.islamic_libraray.Islamic_library_home"
    android:background="@drawable/background"
    android:layoutDirection="rtl"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/back_button"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                app:layout_constraintEnd_toStartOf="@+id/library_text"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                />

            <TextView
                android:id="@+id/library_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/islam_library"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/book1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:background="@drawable/box_background"
                android:gravity="center"
                android:text="@string/sona1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.531"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/library_text" />

            <TextView
                android:id="@+id/book2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/sona2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/box_background"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.474"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book1" />
            <TextView
                android:id="@+id/book3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/sona3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/box_background"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.474"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book2" />
            <TextView
                android:id="@+id/book4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/sona4"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/box_background"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.474"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book3" />
            <TextView
                android:id="@+id/book5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/sona5"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/box_background"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.474"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book4" />
            <TextView
                android:id="@+id/book6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/sona6"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/box_background"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.474"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book5" />
            <TextView
                android:id="@+id/book7"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/sona7"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/box_background"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.474"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book6" />
            <TextView
                android:id="@+id/book8"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/sona8"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/box_background"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.474"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book7" />
            <TextView
                android:id="@+id/book9"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/sona9"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/box_background"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.474"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book8" />
            <TextView
                android:id="@+id/book10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/sona10"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/box_background"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.474"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book9"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>