<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ahadeeth.Ahadeeth_home"
        android:background="@drawable/background"
        android:layoutDirection="rtl"

        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:paddingBottom="@dimen/_20sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/ahadeeth_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="@string/hadeeth_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.545"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textStyle="bold"
                    android:textSize="@dimen/_22ssp"
                    android:textColor="@android:color/black"

                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    app:layout_constraintEnd_toStartOf="@+id/ahadeeth_text"
                    app:layout_constraintHorizontal_bias="0.039"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/ahadeeth1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:text="@string/hadeeth1"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14ssp"
                    android:background="@drawable/box_background"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ahadeeth_text" />

                <TextView
                    android:id="@+id/ahadeeth2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/hadeeth2"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@drawable/box_background"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ahadeeth1" />

                <TextView
                    android:id="@+id/ahadeeth3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/hadeeth3"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@drawable/box_background"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ahadeeth2" />

                <TextView
                    android:id="@+id/ahadeeth4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/hadeeth4"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@drawable/box_background"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ahadeeth3" />

                <TextView
                    android:id="@+id/ahadeeth5"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/hadeeth5"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@drawable/box_background"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ahadeeth4" />

                <TextView
                    android:id="@+id/ahadeeth6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/hadeeth6"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@drawable/box_background"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ahadeeth5" />

                <TextView
                    android:id="@+id/ahadeeth7"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/hadeeth7"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@drawable/box_background"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ahadeeth6" />

                <TextView
                    android:id="@+id/ahadeeth8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/hadeeth8"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@drawable/box_background"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ahadeeth7" />

                <TextView
                    android:id="@+id/ahadeeth9"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/hadeeth9"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@drawable/box_background"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ahadeeth8" />

                <TextView
                    android:id="@+id/ahadeeth10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/hadeeth10"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@drawable/box_background"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ahadeeth9" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>