<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ui.sabha.Sabha_fragment"
        android:paddingBottom="@dimen/_22sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sabaha_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_48sdp"
                    android:text="@string/sabha_text"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/choose_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_17sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:text="@string/choose_zaker_text"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.868"
                    app:layout_constraintStart_toEndOf="@+id/sabaha_top"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/sabaha_choose1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_36sdp"
                    android:background="@drawable/box_background"
                    android:gravity="center"
                    android:text="@string/chhose1_zeker"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/choose_text"

                    />

                <TextView
                    android:id="@+id/sabaha_choose2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/box_background"
                    android:gravity="center"
                    android:text="@string/chhose2_zeker"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@+id/sabaha_choose1" />

                <TextView
                    android:textColor="@android:color/black"
                    android:id="@+id/sabaha_choose3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/box_background"
                    android:gravity="center"
                    android:text="@string/chhose3_zeker"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sabaha_choose2" />

                <TextView
                    android:textColor="@android:color/black"
                    android:id="@+id/sabaha_choose4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/box_background"
                    android:gravity="center"
                    android:text="@string/chhose4_zeker"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sabaha_choose3" />

                <TextView
                    android:textColor="@android:color/black"
                    android:id="@+id/sabaha_choose5"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/box_background"
                    android:gravity="center"
                    android:text="@string/chhose5_zeker"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sabaha_choose4" />

                <TextView
                    android:textColor="@android:color/black"
                    android:id="@+id/sabaha_choose6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/box_background"
                    android:gravity="center"
                    android:text="@string/chhose6_zeker"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sabaha_choose5" />

                <TextView
                    android:textColor="@android:color/black"
                    android:id="@+id/sabaha_choose7"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/box_background"
                    android:gravity="center"
                    android:text="@string/chhose7_zeker"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sabaha_choose6" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>